--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@
 h1, h3, p{
     color:#ffffff;
 }
-.bottom_white_band{
-    width:100%;
-    height: 70px;
-    background-color: #ffffff;
-    position: fixed;
-    bottom: 0;
+.block{
+    width:950px;
+    height:700px;
+    margin: 0 auto;
 }
 /*background_main*/
 .background_main{
@@ -20,18 +18,18 @@ h1, h3, p{
     background-size: cover;
     width: 100%;
     height: 47.8em;
+    padding-top: 50px;
 }
 /*main_content*/
 .yellow_square{
     width: 374px;
     height: 90px;
-    background-image: none;
-    margin: -705px auto 615px;
     background-color: #f1c50e;
+    margin: 10px auto;
 }
 .main_content_txt{
-    margin:-682px auto 624px 0px;
     text-align: center;
+    margin: -76px auto;
 }
 .main_content_txt h1{
     font-size: 2.8em;
@@ -42,6 +40,14 @@ h1, h3, p{
     text-transform: uppercase;
     letter-spacing: 0.13em;
     font-size: 25px;
+}
+/*bottom white band*/
+.bottom_white_band{
+    width:100%;
+    height: 70px;
+    background-color: #ffffff;
+    position: fixed;
+    bottom: 0;
 }
 /*footer*/
 .footer{
